Fix DFG JIT compilation on Linux targets. https://bugs.webkit.org/show_bug.cgi?id=70904

Patch by Andy Wingo <wingo@igalia.com> on 2011-10-31
Reviewed by Darin Adler.

* jit/JITStubs.cpp (SYMBOL_STRING_RELOCATION): Simplify this
macro.

* dfg/DFGOperations.cpp (SYMBOL_STRING_RELOCATION): Copy the
simplified definition from jit/JITStubs.cpp.
(FUNCTION_WRAPPER_WITH_RETURN_ADDRESS, getHostCallReturnValue):
Use the macro to access trampoline targets through the PLT on PIC
systems, instead of introducing a text relocation.  Otherwise, the
library fails to link.

Canonical link: https://commits.webkit.org/87499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98891 268f45cc-cd09-0410-ab3c-d52691b4dbfc